src/tests/data/SemanticErrors/DefWithWrongDecl.c

#include <stdio.h>

void f(int a);

int f() {}  // (2) ERRORS

int main()
{
	return 0;
}